# horizon_callable

./: CMakeLists.txt  ReadMe.rst
docs/doxygen/: Callable.dox
include/callable/: CallbackManager.hpp  Job.hpp
include/horizon/callable/: CallbackManager.hpp  Job.hpp
source/: CallbackManager.cpp
